[gd_scene load_steps=3 format=3 uid="uid://pdcv81wpv3s8"]

[ext_resource type="Script" uid="uid://g5t4sgg2c6dd" path="res://destructible/shatter/shatterable_object.gd" id="1_nbse4"]
[ext_resource type="Script" uid="uid://cj4ks2od2ywxd" path="res://destructible/destructible_shape_calculator.gd" id="2_3uqi2"]

[node name="ShatterableObject" type="Node2D" groups=["DamageableRoot"]]
script = ExtResource("1_nbse4")

[node name="BodyContainer" type="Node2D" parent="."]

[node name="DestructibleShapeCalculator" type="Node" parent="."]
script = ExtResource("2_3uqi2")
